--- a/website/index.html
+++ b/website/index.html
@@ -1,47 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini E-Commerce Website</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Flipkart Clone</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
-    <h1>My E-Commerce Store</h1>
+    <div class="logo">Flipkart</div>
+    <input type="text" class="search-bar" placeholder="Search for products" />
+    <div class="header-right">
+      <a href="cart.html">Cart</a>
+      <a href="#">Login</a>
+    </div>
   </header>
-  
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Products</a>
-    <a href="#">Contact</a>
-  </nav>
 
-  <section class="products">
-    <div class="product">
-      <img src="https://via.placeholder.com/250x200" alt="Product 1">
-      <h2>Product 1</h2>
-      <p>Price: $10</p>
-      <button onclick="addToCart('Product 1')">Add to Cart</button>
-    </div>
-    <div class="product">
-      <img src="https://via.placeholder.com/250x200" alt="Product 2">
-      <h2>Product 2</h2>
-      <p>Price: $20</p>
-      <button onclick="addToCart('Product 2')">Add to Cart</button>
-    </div>
-    <div class="product">
-      <img src="https://via.placeholder.com/250x200" alt="Product 3">
-      <h2>Product 3</h2>
-      <p>Price: $30</p>
-      <button onclick="addToCart('Product 3')">Add to Cart</button>
-    </div>
-  </section>
+  <div class="banner">
+    <h1>Big Billion Days Sale!</h1>
+    <p>Shop the best deals on electronics, fashion, and more.</p>
+  </div>
 
-  <footer>
-    <p>&copy; 2025 My E-Commerce Store</p>
-  </footer>
+  <div class="product-list">
+    <h2>Featured Products</h2>
+    <div class="products" id="products">
+      <!-- Product cards will be injected here by JavaScript -->
+    </div>
+  </div>
 
-  <script src="script.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
